@@ -1,5 +1,11 @@
 2004-11-03  Sam Steingold  <sds@gnu.org>
 
+	* init.lisp (load): do not call COMPILER::C-REPORT-PROBLEMS
+	unless *LOAD-VERBOSE* and *COMPILE-VERBOSE* are true:
+	this fixes a "clisp -q -q -C -i foo" error
+
+2004-11-03  Sam Steingold  <sds@gnu.org>
+
 	* clos-slotdef3.lisp (slot-equal-using-class):
 	avoid a compilation warning
 
